fix: 找不到模块“vue3-drag-resize-rotate”或其相应的类型声明。

--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "vue3-drag-resize-rotate",
   "version": "0.0.3",
   "type": "module",
+  "types": "packages/components/drr.vue.d.ts",
+  "files": [
+    "lib",
+    "packages"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vue-tsc --declaration --emitDeclarationOnly",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
