--- a/package.json
+++ b/package.json
@@ -4,11 +4,28 @@
   "type": "module",
   "types": "packages/components/drr.vue.d.ts",
   "main": "lib/vue3-drag-resize-rotate.js",
+  "module": "./lib/vue3-drag-resize-rotate.mjs",
+  "unpkg": "lib/vue3-drag-resize-rotate.umd.js",
+  "jsdelivr": "lib/vue3-drag-resize-rotate.umd.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AvailableForTheWorld/vue3-drag-resize-rotate"
+  },
+  "bugs": {
+    "url": "https://github.com/AvailableForTheWorld/vue3-drag-resize-rotate/issues"
+  },
+  "exports": {
+    ".": {
+      "require": "./lib/vue3-drag-resize-rotate.umd.js",
+      "import": "./lib/vue3-drag-resize-rotate.mjs"
+    }
+  },
   "files": [
     "lib",
     "packages"
   ],
   "scripts": {
+    "serve": "vite serve",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
