--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.7",
   "type": "module",
   "types": "packages/components/drr.vue.d.ts",
-  "main": "lib/vue3-drag-resize-rotate.js",
-  "module": "./lib/vue3-drag-resize-rotate.mjs",
+  "main": "lib/vue3-drag-resize-rotate.umd.js",
+  "module": "lib/vue3-drag-resize-rotate.mjs",
   "unpkg": "lib/vue3-drag-resize-rotate.umd.js",
   "jsdelivr": "lib/vue3-drag-resize-rotate.umd.js",
   "repository": {
@@ -18,14 +18,15 @@
     ".": {
       "require": "./lib/vue3-drag-resize-rotate.umd.js",
       "import": "./lib/vue3-drag-resize-rotate.mjs"
-    }
+    },
+    "./package.json": "./package.json",
+    "./lib/*": "./lib/*"
   },
   "files": [
     "lib",
     "packages"
   ],
   "scripts": {
-    "serve": "vite serve",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
